tests/lox/errors/parse_stmt_errors.lox
fun 1(1);
fun add(1);
fun add{;
fun add(a,);
fun add(a,b};
fun add(a, b) {);
if a == 1;
if (a == 1};
var 1;
{
    break;
}
// err: One or more errors occurred during parsing the expression:
// err: [at column 5 in line 1] ParseError: Expected function name, found Number(1.0)
// err: [at column 9 in line 2] ParseError: Expected a parameter name, found Number(1.0)
// err: [at column 8 in line 3] ParseError: Expected '(' after function name, found LeftBrace
// err: [at column 11 in line 4] ParseError: Expected a parameter name, found RightParen
// err: [at column 12 in line 5] ParseError: Expected ')' after parameters, found RightBrace
// err: [at column 16 in line 6] ParseError: Unexpected token RightParen found
// err: [at column 4 in line 7] ParseError: Expected '(' after 'if', found Identifier("a")
// err: [at column 10 in line 8] ParseError: Expected ')' after if condition, found RightBrace
// err: [at column 5 in line 9] ParseError: Expected variable name, found Number(1.0)
// err: [at column 5 in line 11] ParseError: Keyword 'break' encountered without a enclosing loop.